--- a/index.html
+++ b/index.html
@@ -479,35 +479,53 @@ p {
           <div class="pricing-text  p-1 ">
             <div class="owl-carousel pricing-carousel">
               <div class="">
-                <a href="images/pooja units/1.png" data-lightbox="mygallery"  data-title="Image 1">
-               <img class="imgsss fade-in" src="images/pooja units/1.png"  alt=""></a>
+                <a href="sr-interior-images/pooja-room/AP1GczM4RIQkvjg9fDquoEIE3F1XrAZh.webp" data-lightbox="mygallery"  data-title="Image 1">
+               <img class="imgsss fade-in" src="sr-interior-images/pooja-room/AP1GczM4RIQkvjg9fDquoEIE3F1XrAZh.webp"  alt=""></a>
                <p class="text-center three-d-text ">Elegant Designs for Sacred Spaces
                </p>
               </div>
               <div class="">
-                <a href="images/pooja units/2.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss fade-in" src="images/pooja units/2.png" alt=""></a>
+                <a href="sr-interior-images/pooja-room/AP1GczM6GERLmaQYc4Qtkzy_yasSOcLv.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img class="imgsss fade-in" src="sr-interior-images/pooja-room/AP1GczM6GERLmaQYc4Qtkzy_yasSOcLv.webp" alt=""></a>
               <p class="text-center three-d-text ">Custom Pooja Units that Blend Tradition 
               </p>
               </div>
               <div class="">
-                <a href="images/pooja units/3.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss fade-in" src="images/pooja units/3.png" alt=""></a>
+                <a href="sr-interior-images/pooja-room/AP1GczNq7J0X8jXcfy4PgKCqPvtfZx-S.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img class="imgsss fade-in" src="sr-interior-images/pooja-room/AP1GczNq7J0X8jXcfy4PgKCqPvtfZx-S.webp" alt=""></a>
               <p class="text-center three-d-text ">Crafting Sanctuaries for Peaceful Worship
                </p>
               </div>
               <div class="">
-                <a href="images/pooja units/6.png" data-lightbox="mygallery" data-title="Image 1">
-                <img class="imgsss fade-in" src="images/pooja units/6.png" alt=""></a>
+                <a href="sr-interior-images/pooja-room/pooja1.jpg" data-lightbox="mygallery" data-title="Image 1">
+                <img class="imgsss fade-in" src="sr-interior-images/pooja-room/pooja1.jpg" alt=""></a>
                 <p class="text-center three-d-text ">Pooja Units to Elevate Your Home’s Aura
                  </p>
                 </div>
                 <div class="">
-                  <a href="images/pooja units/5.png" data-lightbox="mygallery" data-title="Image 1">
-                  <img class="imgsss fade-in" src="images/pooja units/5.png" alt=""></a>
+                  <a href="sr-interior-images/pooja-room/puja2.webp" data-lightbox="mygallery" data-title="Image 1">
+                  <img class="imgsss fade-in" src="sr-interior-images/pooja-room/puja2.webp" alt=""></a>
                   <p class="text-center three-d-text ">Bring Spiritual Serenity to Your Interiors 
                    </p>
                   </div>
+                  <div class="">
+                    <a href="sr-interior-images/pooja-room/puja3.webp" data-lightbox="mygallery" data-title="Image 1">
+                  <img class="imgsss fade-in" src="sr-interior-images/pooja-room/puja3.webp" alt=""></a>
+                  <p class="text-center three-d-text ">Crafting Sanctuaries for Peaceful Worship
+                   </p>
+                  </div>
+                  <div class="">
+                    <a href="sr-interior-images/pooja-room/AP1GczMMyRadzPXS5jIB4cx6ARMmlYlt.webp" data-lightbox="mygallery" data-title="Image 1">
+                    <img class="imgsss fade-in" src="sr-interior-images/pooja-room/AP1GczMMyRadzPXS5jIB4cx6ARMmlYlt.webp" alt=""></a>
+                    <p class="text-center three-d-text ">Pooja Units to Elevate Your Home’s Aura
+                     </p>
+                    </div>
+                    <div class="">
+                      <a href="sr-interior-images/pooja-room/AP1GczOZ5BzhsZfWzIyJh1aZEy4LcNGD.webp" data-lightbox="mygallery" data-title="Image 1">
+                      <img class="imgsss fade-in" src="sr-interior-images/pooja-room/AP1GczOZ5BzhsZfWzIyJh1aZEy4LcNGD.webp" alt=""></a>
+                      <p class="text-center three-d-text ">Bring Spiritual Serenity to Your Interiors 
+                       </p>
+                      </div>
             </div>
           </div>
           <div class="text-center view-more">
@@ -542,32 +560,32 @@ p {
           <div class="pricing-text  p-1 ">
             <div class="owl-carousel pricing-carousel">
               <div class="">
-                <a href="images/livingrooms/2.png" data-lightbox="mygallery" data-title="Image 1">
-               <img class="imgsss fade-in" src="images/livingrooms/2.png" alt=""></a>
+                <a href="sr-interior-images/living-room/AP1GczNDM8fhDg3v82Xlm3PNxBerqA20.webp" data-lightbox="mygallery" data-title="Image 1">
+               <img class="imgsss fade-in" src="sr-interior-images/living-room/AP1GczNDM8fhDg3v82Xlm3PNxBerqA20.webp" alt=""></a>
                <p class="text-center three-d-text ">Where Comfort Meets Style
                </p>
               </div>
               <div class="">
-                <a href="images/livingrooms/19.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss fade-in" src="images/livingrooms/19.png" alt=""></a>
+                <a href="sr-interior-images/living-room/AP1GczNEQMdDcbiotAsuxQD5pM6FU-Ma.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img class="imgsss fade-in" src="sr-interior-images/living-room/AP1GczNEQMdDcbiotAsuxQD5pM6FU-Ma.webp" alt=""></a>
               <p class="text-center three-d-text ">Living Spaces Designed for Your Lifestyle
               </p>
               </div>
               <div class="">
-                <a href="images/livingrooms/18.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss fade-in" src="images/livingrooms/18.png" alt=""></a>
+                <a href="sr-interior-images/living-room/AP1GczNgMrSYt5olHrf1uDUKGcCKed3z.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img class="imgsss fade-in" src="sr-interior-images/living-room/AP1GczNgMrSYt5olHrf1uDUKGcCKed3z.webp" alt=""></a>
               <p class="text-center three-d-text ">Crafting Cozy, Elegant, and Functional Living Rooms
                </p>
               </div>
               <div class="">
-                <a href="images/livingrooms/16.png" data-lightbox="mygallery" data-title="Image 1">
-                <img class="imgsss fade-in" src="images/livingrooms/16.png" alt=""></a>
+                <a href="sr-interior-images/living-room/AP1GczNKc9FLuJ6U0cjaSoejbDZMnyBU.webp" data-lightbox="mygallery" data-title="Image 1">
+                <img class="imgsss fade-in" src="sr-interior-images/living-room/AP1GczNKc9FLuJ6U0cjaSoejbDZMnyBU.webp" alt=""></a>
                 <p class="text-center three-d-text ">Create a Luxurious Living Room
                  </p>
                 </div>
                 <div class="">
-                  <a href="images/livingrooms/8.png" data-lightbox="mygallery" data-title="Image 1">
-                  <img class="imgsss fade-in" src="images/livingrooms/8.png" alt=""></a>
+                  <a href="sr-interior-images/living-room/AP1GczNL6UvRllFATJ4-buKZ0J7zC_s2.webp" data-lightbox="mygallery" data-title="Image 1">
+                  <img class="imgsss fade-in" src="sr-interior-images/living-room/AP1GczNL6UvRllFATJ4-buKZ0J7zC_s2.webp" alt=""></a>
                   <p class="text-center three-d-text ">Tailored Designs for the Perfect Gathering Space 
                    </p>
                   </div>
@@ -605,32 +623,32 @@ p {
           <div class="pricing-text  p-1 ">
             <div class="owl-carousel pricing-carousel">
               <div class="">
-                <a href="images/kitchen-hero/1.png" data-lightbox="mygallery" data-title="Image 1">
-               <img class="imgsss fade-in" src="images/kitchen-hero/1.png" alt=""></a>
+                <a href="sr-interior-images/kitchens/AP1GczMCwjSb5RgoDrRG4FKXJ6h0z1a0.webp" data-lightbox="mygallery" data-title="Image 1">
+               <img class="imgsss fade-in" src="sr-interior-images/kitchens/AP1GczMCwjSb5RgoDrRG4FKXJ6h0z1a0.webp" alt=""></a>
                <p class="text-center three-d-text ">Functional, Stylish Kitchens for Every Home
                </p>
               </div>
               <div class="">
-                <a href="images/kitchen-hero/2.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss fade-in" src="images/kitchen-hero/2.png" alt=""></a>
+                <a href="sr-interior-images/kitchens/AP1GczMEY8EuMhMsqFYVH7vzm6ouszKA.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img class="imgsss fade-in" src="sr-interior-images/kitchens/AP1GczMEY8EuMhMsqFYVH7vzm6ouszKA.webp" alt=""></a>
               <p class="text-center three-d-text ">Custom Kitchens Designed for Effortless Cooking
               </p>
               </div>
               <div class="">
-                <a href="images/kitchen-hero/3.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss fade-in" src="images/kitchen-hero/3.png" alt=""></a>
+                <a href="sr-interior-images/kitchens/AP1GczMn0jW80GpsvlNGFK53eeVjzn5P.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img class="imgsss fade-in" src="sr-interior-images/kitchens/AP1GczMn0jW80GpsvlNGFK53eeVjzn5P.webp" alt=""></a>
               <p class="text-center three-d-text ">Blending Style and Efficiency in Every Kitchen Design
                </p>
               </div>
               <div class="">
-                <a href="images/kitchen-hero/4.png" data-lightbox="mygallery" data-title="Image 1">
-                <img class="imgsss fade-in" src="images/kitchen-hero/4.png" alt=""></a>
+                <a href="sr-interior-images/kitchens/AP1GczNCj826s2jeEnkPhCAun5m5Fsmu.webp" data-lightbox="mygallery" data-title="Image 1">
+                <img class="imgsss fade-in" src="sr-interior-images/kitchens/AP1GczNCj826s2jeEnkPhCAun5m5Fsmu.webp" alt=""></a>
                 <p class="text-center three-d-text ">Tailored Kitchens to Match Your Culinary Lifestyle
                  </p>
                 </div>
                 <div class="">
-                  <a href="images/kitchen-hero/5.png" data-lightbox="mygallery" data-title="Image 1">
-                  <img class="imgsss fade-in" src="images/kitchen-hero/5.png" alt=""></a>
+                  <a href="sr-interior-images/kitchens/AP1GczNxZkXLHBohZ-LDYoeT3iJE25mo.webp" data-lightbox="mygallery" data-title="Image 1">
+                  <img class="imgsss fade-in" src="sr-interior-images/kitchens/AP1GczNxZkXLHBohZ-LDYoeT3iJE25mo.webp" alt=""></a>
                   <p class="text-center three-d-text ">Creating Modern Kitchens with a Personal Touch
                    </p>
                   </div>
@@ -666,32 +684,32 @@ p {
           <div class="pricing-text  p-1 ">
             <div class="owl-carousel pricing-carousel">
               <div class="">
-                <a href="images/bedroom-hero/2.png" data-lightbox="mygallery" data-title="Image 1">
-               <img class="imgsss fade-in" src="images/bedroom-hero/2.png" alt=""></a>
+                <a href="sr-interior-images/bedroom/AP1GczNb9ToSf5ueyaO-i5AdvSk3AhYZ.webp" data-lightbox="mygallery" data-title="Image 1">
+               <img class="imgsss fade-in" src="sr-interior-images/bedroom/AP1GczNb9ToSf5ueyaO-i5AdvSk3AhYZ.webp" alt=""></a>
                <p class="text-center three-d-text ">Bedrooms Designed for Rest and Relaxation
                </p>
               </div>
               <div class="">
-                <a href="images/bedroom-hero/3.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss fade-in" src="images/bedroom-hero/3.png" alt=""></a>
+                <a href="sr-interior-images/bedroom/AP1GczMmZiiai9Rz5NbUL601EIaJzNID.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img class="imgsss fade-in" src="sr-interior-images/bedroom/AP1GczMmZiiai9Rz5NbUL601EIaJzNID.webp" alt=""></a>
               <p class="text-center three-d-text ">Tailored Comfort for Your Dream Bedroom
               </p>
               </div>
               <div class="">
-                <a href="images/bedroom-hero/5.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss fade-in" src="images/bedroom-hero/5.png" alt=""></a>
+                <a href="sr-interior-images/bedroom/AP1GczNk0F32pkeQo74nfQpGZXhyIWVv.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img class="imgsss fade-in" src="sr-interior-images/bedroom/AP1GczNk0F32pkeQo74nfQpGZXhyIWVv.webp" alt=""></a>
               <p class="text-center three-d-text ">Crafting Peaceful Sanctuaries for a Restful Night
                </p>
               </div>
               <div class="">
-                <a href="images/bedroom-hero/6.png" data-lightbox="mygallery" data-title="Image 1">
-                <img class="imgsss fade-in" src="images/bedroom-hero/6.png" alt=""></a>
+                <a href="sr-interior-images/bedroom/AP1GczOTMBUCCjBE-9ssvKuuaeX4zgVc.webp" data-lightbox="mygallery" data-title="Image 1">
+                <img class="imgsss fade-in" src="sr-interior-images/bedroom/AP1GczOTMBUCCjBE-9ssvKuuaeX4zgVc.webp" alt=""></a>
                 <p class="text-center three-d-text ">Elegant, Cozy, and Functional Bedroom Designs
                  </p>
                 </div>
                 <div class="">
-                  <a href="images/bedroom-hero/1.png" data-lightbox="mygallery" data-title="Image 1">
-                  <img class="imgsss fade-in" src="images/bedroom-hero/1.png" alt=""></a>
+                  <a href="sr-interior-images/bedroom/AP1GczP_TRdMDje-wPM2GxHmkg39scEw.webp" data-lightbox="mygallery" data-title="Image 1">
+                  <img class="imgsss fade-in" src="sr-interior-images/bedroom/AP1GczP_TRdMDje-wPM2GxHmkg39scEw.webp" alt=""></a>
                   <p class="text-center three-d-text ">Transform Your Bedroom into a Haven of Tranquility
                    </p>
                   </div>
