--- a/about.html
+++ b/about.html
@@ -402,20 +402,20 @@ p {
   </div>
   <div class="gallery-image-container" data-aos="fade-left" data-aos-duration="2000">
     <div class="gallery-image-row" id="row1">
-      <img src="images/livingrooms/2.png" alt="Image 1">
-      <img src="images/pooja units/3.png" alt="Image 2">
-      <img src="images/residence/kitchensss/3.png" alt="Image 3">
+      <img src="sr-interior-images/living-room/AP1GczNEQMdDcbiotAsuxQD5pM6FU-Ma.webp" alt="Image 2">
+      <img src="sr-interior-images/tvunits/AP1GczMiqEHTALh0xhdhCs_myDYlwden.webp" alt="Image 1">
+      <img src="sr-interior-images/kitchens/AP1GczMEY8EuMhMsqFYVH7vzm6ouszKA.webp" alt="Image 3">
     </div>
     
     <div class="gallery-image-row" id="row3">
-      <img src="images/tvunits/20.png" alt="Image 7">
-      <img src="images/residence/kitchensss/14.png" alt="Image 8">
-      <img src="images/pooja units/7.png" alt="Image 9">
+      <img src="sr-interior-images/tvunits/AP1GczMhugWz1-XbIdIlqMWLiYbKYC5U.webp" alt="Image 7">
+      <img src="sr-interior-images/kitchens/AP1GczO6Wds7VD77GX6zP7Z94QrsRY82.webp" alt="Image 8">
+      <img src="sr-interior-images/living-room/AP1GczMPfmtyp2oD9-7S77Nljeu7IfAa.webp" alt="Image 9">
     </div>
     <div class="gallery-image-row" id="row4">
-      <img src="images/tvunits/9.png" alt="Image 10">
-      <img src="images/residence/kitchensss/23.png" alt="Image 11">
-      <img src="images/pooja units/5.png" alt="Image 12">
+      <img src="sr-interior-images/tvunits/AP1GczOcmHiOueX8FV6USUD_u-Ekh1LF.webp" alt="Image 10">
+      <img src="sr-interior-images/bedroom/AP1GczOTMBUCCjBE-9ssvKuuaeX4zgVc.webp" alt="Image 11">
+      <img src="sr-interior-images/pooja-room/puja3.webp" alt="Image 12">
     </div>
    
 
@@ -558,11 +558,13 @@ p {
 }
 
 .gallery-image-row img {
-  width: 100%; /* Make images responsive */
-  max-width: 90%; /* Limits maximum width on larger screens */
+  width: 400px;
+  height:400px; /* Make images responsive */
+   /* Limits maximum width on larger screens */
   margin: 10px 0; /* Spacing between images */
   border-radius: 8px;
   transition: transform 0.3s;
+  object-fit: cover;
 }
 
 .gallery-image-row img:hover {
