--- a/commercial-services.html
+++ b/commercial-services.html
@@ -290,7 +290,7 @@
             <div class="image-container">
                 <div class="images-wrapper">
                   <img src="sr-interior-images/commercial/AP1GczO9bwKe8GEuv77iyBk9MWX4Ti20.webp" alt="Image 5" class="gallery-image">
-                  <img src="sr-interior-images/commercial/AP1GczMfrkuWt7GJh-PI-8qWDZRlNOUb.webp" alt="Image 6" class="gallery-image">
+                  <!-- <img src="sr-interior-images/commercial/AP1GczMfrkuWt7GJh-PI-8qWDZRlNOUb.webp" alt="Image 6" class="gallery-image"> -->
                   <img src="sr-interior-images/commercial/AP1GczOliSrNKR5i1SVMxJBn9YHGO6sg.webp" alt="Image 7" class="gallery-image">
                   <img src="sr-interior-images/commercial/AP1GczOVR96R8KZyfMAk_27ZrLJFlat3.webp" alt="Image 8" class="gallery-image">
                   <img src="sr-interior-images/commercial/AP1GczPacDO4m_wyGr3mAbhUH1goHDKd.webp" alt="Image 8" class="gallery-image">
