--- a/gallery.html
+++ b/gallery.html
@@ -236,6 +236,7 @@
         margin: 5px;
         flex-shrink: 0;
         border-radius: 20px;
+        object-fit: cover;
       }
 
       .nav-button {
