--- a/index.html
+++ b/index.html
@@ -297,12 +297,13 @@ src="https://www.facebook.com/tr?id=798700839056721&ev=PageView&noscript=1"
   .cta-button {
   background-color: #D19A23; /* Bright, attention-grabbing color */
   color: white;
-  padding: 15px 25px;
+  padding: 15px 20px;
   text-align: center;
   text-decoration: none;
   border-radius: 5px;
   font-size: 16px;
- 
+  height:20px;
+  width:20px:
   transition: background-color 0.3s ease;
 }
 
