--- a/index.html
+++ b/index.html
@@ -297,13 +297,12 @@ src="https://www.facebook.com/tr?id=798700839056721&ev=PageView&noscript=1"
   .cta-button {
   background-color: #D19A23; /* Bright, attention-grabbing color */
   color: white;
-  padding: 15px 20px;
+  /* padding: 15px 20px; */
   text-align: center;
   text-decoration: none;
   border-radius: 5px;
   font-size: 16px;
-  height:20px;
-  width:20px:
+  
   transition: background-color 0.3s ease;
 }
 
@@ -2440,7 +2439,7 @@ color: white;
     
     <div class="gallery-image-row" id="row3">
       <img src="sr-interior-images/tvunits/AP1GczMhugWz1-XbIdIlqMWLiYbKYC5U.webp" alt="home interior renovation in Hyderabad">
-      <img src="sr-interior-images/kitchens/AP1GczO6Wds7VD77GX6zP7Z94QrsRY82.webp" alt="premium residential interiors in Telangana">
+      <img src="sr-interior-images/kitchens/AP1GczNs777dRK9v6oBxus-V9krMr2VW.webp" alt="premium residential interiors in Telangana">
       <img src="sr-interior-images/living-room/AP1GczMPfmtyp2oD9-7S77Nljeu7IfAa.webp"  alt="home renovation services in Kokapet">
     </div>
     <div class="gallery-image-row" id="row4">
