--- a/project.html
+++ b/project.html
@@ -395,7 +395,7 @@
       </ul>
       <div class="social">
         <a href="https://www.facebook.com/profile.php?id=61566746447096" target="_blank"><i class="bi bi-facebook" style="color: #D19A23;"></i></a>
-        <a href="https://x.com/SR_Interiors3" target="_blank"><i class="bi bi-twitter" style="color: #D19A23;"></i></a>
+        <a href="https://x.com/SR_Interiors3" target="_blank"><i class="fab fa-x-twitter" style="color: #D19A23;"></i></a>
         <a href="https://www.linkedin.com/in/sr-interiors-ba3a61332/" target="_blank"><i class="bi bi-linkedin" style="color: #D19A23;"></i></a> 
         <a href="https://www.instagram.com/sr_interiors3/" target="_blank"><i class="bi bi-instagram" style="color: #D19A23;"></i></a>
         <a href="https://www.youtube.com/@SRInteriors-w7z" target="_blank"><i class="fab fa-youtube" style="color: #D19A23;"></i></a>
