--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ src="https://www.facebook.com/tr?id=798700839056721&ev=PageView&noscript=1"
 <!-- <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" /> -->
   <!-- Include Font Awesome for Icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   </head>
   <body>
@@ -2830,7 +2831,7 @@ color: white;
       </ul>
       <div class="social">
         <a href="https://www.facebook.com/profile.php?id=61566746447096" target="_blank"><i class="bi bi-facebook" style="color: #D19A23;"></i></a>
-        <a href="https://x.com/SR_Interiors3" target="_blank"><i class="bi bi-twitter" style="color: #D19A23;"></i></a>
+        <a href="https://x.com/SR_Interiors3" target="_blank"><i class="fab fa-x-twitter" style="color: #D19A23;"></i></a>
         <a href="https://www.linkedin.com/in/sr-interiors-ba3a61332/" target="_blank"><i class="bi bi-linkedin" style="color: #D19A23;"></i></a> 
         <a href="https://www.instagram.com/sr_interiors3/" target="_blank"><i class="bi bi-instagram" style="color: #D19A23;"></i></a>
         <a href="https://www.youtube.com/@SRInteriors-w7z" target="_blank"><i class="fab fa-youtube" style="color: #D19A23;"></i></a>
