--- a/index.html
+++ b/index.html
@@ -1222,6 +1222,7 @@ color: white;
       height:500px;
       margin-bottom: 10px;
       border-radius: 8px;
+      object-fit: cover;
   }
   .scroll-images.scroll-up {
       animation: scroll-up 10s linear infinite;
@@ -1710,6 +1711,7 @@ color: white;
     top: 0;
     left: 0;
     z-index: 1; /* Positions behind text */
+    
   }
 
   .side-txt-part {
