--- a/index.html
+++ b/index.html
@@ -2703,6 +2703,7 @@ color: white;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    
   }
 
   .gallery-image-row {
@@ -2710,6 +2711,7 @@ color: white;
     flex-direction: row; /* Aligns images horizontally */
     justify-content: center;
     flex-wrap: wrap;
+    max-width: 100%;
   }
 
   .gallery-image-row img {
