--- a/index.html
+++ b/index.html
@@ -2715,7 +2715,9 @@ color: white;
   }
 
   .gallery-image-row img {
-    max-width: 100%; /* Adjust image size for larger screens */
+    max-width: 30%; /* Adjust image size for larger screens */
+    justify-content: space-around;
+
   }
 
   .gallery-pagination {
