--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ src="https://www.facebook.com/tr?id=798700839056721&ev=PageView&noscript=1"
               class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/sr_interiors3/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://www.youtube.com/@SRInteriors-w7z" target="_blank"><i class="fab fa-youtube"></i></a>
-          <a href="https://x.com/SR_Interiors3" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://x.com/SR_Interiors3" target="_blank"><i class="fab fa-x-twitter"></i></a>
           <a href="https://www.linkedin.com/in/sr-interiors-ba3a61332/" target="_blank"><i
               class="fab fa-linkedin-in"></i></a>
         </div>
