--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@ color: white;
       }
 
       .container {
-          width: 100%; /* Make images full width */
+          max-width: 100%; /* Make images full width */
           height: 500px !important;  /* Adjust height for mobile */
       }
 
