--- a/index.html
+++ b/index.html
@@ -1276,36 +1276,43 @@ color: white;
   }
 
   /* Responsive adjustments for mobile */
-  @media (max-width: 768px) {
-      .sectionproo {
-          flex-direction: column; /* Stack elements vertically on mobile */
-      }
+@media (max-width: 768px) {
+    .sectionproo {
+        flex-direction: column; /* Stack elements vertically on mobile */
+    }
 
-      .container {
-          max-width: 100%; /* Make images full width */
-          height: 500px !important;  /* Adjust height for mobile */
-      }
+    .container {
+        max-width: 100%; /* Make containers full width */
+        height: 400px; /* Adjust height for mobile */
+    }
 
-      .sectionproo::before {
-          font-size: 100px; /* Reduce background text size */
-      }
+    .scroll-images img {
+        width: 90%; /* Slight padding around the images */
+        margin: 5px auto; /* Center the images */
+    }
 
-      .buttons-container {
-          margin-top: 10px; /* Adjust button spacing */
-      }
-  }
+    .sectionproo::before {
+        font-size: 100px; /* Reduce background text size */
+    }
 
-  @media (max-width: 480px) {
-      .container {
-          height: 500px; /* Further reduce height for extra small screens */
-      }
+    .left {
+        font-size: 40px; /* Adjust text size for mobile */
+    }
+}
 
-      .sectionproo::before {
-          font-size: 80px; /* Smaller font size for "PROJECTS" background */
-      }
-  }
+@media (max-width: 480px) {
+    .container {
+        height: 350px; /* Further reduce height for extra small screens */
+    }
 
-</style>
+    .scroll-images img {
+        width: 100%; /* Fill the container on very small screens */
+    }
+
+    .sectionproo::before {
+        font-size: 80px; /* Smaller font size for "PROJECTS" background */
+    }
+}</style>
 
     
 
