--- a/contact.html
+++ b/contact.html
@@ -397,7 +397,7 @@
                   </button>
                   <div>
                     <h4 class="text-dark">Email Address</h4>
-                    <h6>srinteriors@gmail.com</h6>
+                    <h6>srinteriors33@gmail.com</h6>
                   </div>
                 </div>
 
