--- a/index.html
+++ b/index.html
@@ -2915,7 +2915,7 @@ color: white;
 </footer>    
 
 <!--whatsapp btn start-->
-<div class="whatsapp mr-3" id="whatsapp">
+<div class="whatsapp" id="whatsapp">
   <a href="https://wa.me/+919963043888" target="_blank"><i class="bi bi-whatsapp"></i></a>
 </div>
 <!--whatsapp btn end-->
