--- a/index.html
+++ b/index.html
@@ -406,7 +406,11 @@ src="https://www.facebook.com/tr?id=798700839056721&ev=PageView&noscript=1"
   font-weight: 600; /* Maintain bold font for emphasis */
   margin-bottom: 10px; /* Space below heading */
 }
-
+h2.honetags{
+  font-weight: 800;
+  text-transform: capitalize !important;
+  font-family: "Inter", sans-serif;
+}
 .row.mt-4 {
   margin-top: 40px; /* Space above Vision and Mission section */
 }
