--- a/commercial-services.html
+++ b/commercial-services.html
@@ -250,6 +250,7 @@
             margin: 5px;
             flex-shrink: 0;
             border-radius: 20px;
+            object-fit: cover;
         }
 
         .nav-button {
