--- a/renovation-services.html
+++ b/renovation-services.html
@@ -242,6 +242,7 @@
             margin: 5px;
             flex-shrink: 0;
             border-radius: 20px;
+            object-fit: cover;
         }
 
         .nav-button {
