--- a/project.html
+++ b/project.html
@@ -256,7 +256,7 @@
     
       .gallery-img {
           width: 100%; /* Ensure images take up the full width of their container */
-          height: auto; /* Maintain aspect ratio */
+          height: 400px; /* Maintain aspect ratio */
           object-fit: cover; /* Crop images without distortion */
           transition: transform 0.3s ease-in-out;
           border-radius: 8px;
