--- a/packages.html
+++ b/packages.html
@@ -138,6 +138,11 @@
   border: none;
   cursor: pointer;
 }
+@media(max-width:992px){
+  .Btn-Container{
+    width: 100%;
+  }
+}
 .icon-Container {
   width: 45px;
   height: 45px;
