--- a/packages.html
+++ b/packages.html
@@ -450,6 +450,7 @@
         <p class=" pl-1">wardrobe and loft as per room based</p>
       </div>
       <div class="text-center">
+        <a href="contact.html">
         <button class="Btn-Container">
           <span class="text">Get Package Offers</span>
           <span class="icon-Container">
@@ -472,6 +473,7 @@
             </svg>
           </span>
         </button>
+        </a>
       </div>
 
   </div>
@@ -634,7 +636,9 @@
       </div>
 
       <div class="text-center">
+        <a href="contact.html">
         <button class="Btn-Container">
+          <a href="contact.html">
           <span class="text">Get Package Offers</span>
           <span class="icon-Container">
             <svg
@@ -656,6 +660,8 @@
             </svg>
           </span>
         </button>
+        </a>
+      </a>
       </div>
   </div>
 
@@ -870,6 +876,7 @@
 
 
       <div class="text-center">
+        <a href="contact.html">
         <button class="Btn-Container">
           <span class="text">Get Package Offers</span>
           <span class="icon-Container">
@@ -892,6 +899,7 @@
             </svg>
           </span>
         </button>
+        </a>
       </div>
 
   </div>
@@ -1091,6 +1099,7 @@
 
 
       <div class="text-center">
+        <a href="contact.html">
         <button class="Btn-Container">
           <span class="text">Get Package Offers</span>
           <span class="icon-Container">
@@ -1113,6 +1122,7 @@
             </svg>
           </span>
         </button>
+        </a>
       </div>
 
   </div>
@@ -1319,6 +1329,7 @@
 
 
       <div class="text-center">
+        <a href="contact.html">
         <button class="Btn-Container">
           <span class="text">Get Package Offers</span>
           <span class="icon-Container">
@@ -1341,6 +1352,7 @@
             </svg>
           </span>
         </button>
+        </a>
       </div>
 
   </div>
@@ -1569,6 +1581,7 @@
 
 
       <div class="text-center">
+        <a href="contact.html">
         <button class="Btn-Container">
           <span class="text">Get Package Offers</span>
           <span class="icon-Container">
@@ -1591,6 +1604,7 @@
             </svg>
           </span>
         </button>
+        </a>
       </div>
 
   </div>
@@ -1793,6 +1807,7 @@
       </div>
 
       <div class="text-center">
+        <a href="contact.html">
         <button class="Btn-Container">
           <span class="text">Get Package Offers</span>
           <span class="icon-Container">
@@ -1815,6 +1830,7 @@
             </svg>
           </span>
         </button>
+        </a>
       </div>
 
   </div>
@@ -2059,6 +2075,7 @@
 
 
       <div class="text-center">
+        <a href="contact.html">
         <button class="Btn-Container">
           <span class="text">Get Package Offers</span>
           <span class="icon-Container">
@@ -2081,6 +2098,7 @@
             </svg>
           </span>
         </button>
+        </a>
       </div>
 
   </div>
@@ -2334,6 +2352,7 @@
       </div>
 
       <div class="text-center">
+        <a href="contact.html">
         <button class="Btn-Container">
           <span class="text">Get Package Offers</span>
           <span class="icon-Container">
@@ -2356,6 +2375,7 @@
             </svg>
           </span>
         </button>
+        </a>
       </div>
 
   </div>
